name:                highlighting-kate2
version:             0.1.0.0
synopsis:            Experimental new version of highlighting-kate
-- description:         
homepage:            https://github.com/jgm/highlighting-kate2
license:             GPL-2
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
-- copyright:           
category:            Text
build-type:          Simple
extra-source-files:  changelog.md
cabal-version:       >=1.10

library
  exposed-modules:     Highlighting.Kate.Parser
  -- other-modules:
  other-extensions:    CPP, Arrows
  build-depends:       base,
                       text,
                       bytestring,
                       regex-pcre-builtin,
                       directory,
                       filepath,
                       pretty
  hs-source-dirs:      .
  default-language:    Haskell2010

executable parse-hk
  other-extensions:    CPP, Arrows
  build-depends:       base,
                       hxt,
                       safe,
                       text,
                       highlighting-kate2
  hs-source-dirs:      bin
  main-is:             Parse.hs
  default-language:    Haskell2010

test-suite test-highlighting-kate2
  Type:           exitcode-stdio-1.0
  Main-Is:        test.hs
  Hs-Source-Dirs: test
  build-depends:  base,
                  hspec,
                  extensible-exceptions,
                  QuickCheck,
                  highlighting-kate2
  default-language: Haskell2010


