name:                skylighting
version:             0.1.0.0
synopsis:            Experimental new version of highlighting-kate
-- description:         
homepage:            https://github.com/jgm/skylighting
license:             GPL-2
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
-- copyright:           
category:            Text
build-type:          Simple
extra-source-files:  changelog.md
cabal-version:       >=1.10

library
  exposed-modules:     Skylighting
                       Skylighting.Types
                       Skylighting.Regex
                       Skylighting.Parser
                       Skylighting.Styles
                       Skylighting.Tokenizer
                       Skylighting.Format.HTML
                       Skylighting.Format.LaTeX
                       Skylighting.Syntax
  other-modules:
                       Skylighting.Syntax.Haskell
                       Skylighting.Syntax.Cmake
                       Skylighting.Syntax.Diff
                       Skylighting.Syntax.Javascript
  other-extensions:    CPP, Arrows
  build-depends:       base,
                       mtl,
                       bytestring,
                       regex-pcre-builtin,
                       directory,
                       filepath,
                       utf8-string,
                       hxt,
                       safe,
                       blaze-html >= 0.5,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(bootstrap)
    buildable:         False

Flag bootstrap
  Description:   Only build skylighting-extract
  Default:       False

executable skylighting-extract
  build-depends:       base,
                       filepath,
                       text,
                       regex-pcre-builtin,
                       safe,
                       hxt,
                       utf8-string,
                       pretty-show,
                       containers,
                       directory
  hs-source-dirs:      bin, src
  main-is:             extract.hs
  default-language:    Haskell2010
  other-extensions:    CPP
  ghc-options:         -Wall
  other-modules:       Skylighting.Types
                       Skylighting.Regex
                       Skylighting.Parser
  if flag(bootstrap)
    buildable:         True
  else
    buildable:         False

executable skylighting
  build-depends:       base,
                       filepath,
                       text,
                       pretty-show,
                       containers,
                       directory,
                       blaze-html >= 0.5,
                       skylighting
  hs-source-dirs:      bin
  main-is:             main.hs
  default-language:    Haskell2010
  other-extensions:    CPP
  ghc-options:         -Wall
  if flag(bootstrap)
    buildable:         False

test-suite test-skylighting
  Type:           exitcode-stdio-1.0
  Main-Is:        test.hs
  Hs-Source-Dirs: test
  build-depends:  base,
                  hspec,
                  extensible-exceptions,
                  QuickCheck,
                  skylighting
  default-language: Haskell2010
  if flag(bootstrap)
    buildable:         False

