name:                skylighting
version:             0.1.0.0
synopsis:            syntax highlighting library
description:         skylighting is a syntax highlighting library with
                     support for over one hundred languages.  It derives
                     its tokenizers from XML syntax definitions used
                     by KDE's KSyntaxHighlighting framework, so any
                     syntax supported by that framework can be added.
                     An optional command-line program is provided.

homepage:            https://github.com/jgm/skylighting
license:             GPL-2
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           (C) 2016 John MacFarlane
category:            Text
build-type:          Simple
extra-source-files:  changelog.md
                     README.md
                     tests/expected/*.native
                     tests/cases/abc.ada
                     tests/cases/abc.agda
                     tests/cases/abc.c
                     tests/cases/abc.clojure
                     tests/cases/abc.cpp
                     tests/cases/abc.cs
                     tests/cases/abc.d
                     tests/cases/abc.fortran
                     tests/cases/abc.go
                     tests/cases/abc.haskell
                     tests/cases/abc.java
                     tests/cases/abc.javascript
                     tests/cases/abc.julia
                     tests/cases/abc.kotlin
                     tests/cases/abc.lisp
                     tests/cases/abc.matlab
                     tests/cases/abc.ocaml
                     tests/cases/abc.perl
                     tests/cases/abc.php
                     tests/cases/abc.prolog
                     tests/cases/abc.python
                     tests/cases/abc.r
                     tests/cases/abc.ruby
                     tests/cases/abc.scala
                     tests/cases/abc.scheme
                     tests/cases/abc.tcl
                     tests/cases/archive.rhtml
                     tests/cases/life.lua
                     test/cases/hk91.html

cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/jgm/skylighting.git

library
  exposed-modules:     Skylighting
                       Skylighting.Types
                       Skylighting.Regex
                       Skylighting.Parser
                       Skylighting.Styles
                       Skylighting.Tokenizer
                       Skylighting.Format.HTML
                       Skylighting.Format.LaTeX
                       Skylighting.Syntax
  other-modules:
                       Skylighting.Syntax.Abc
                       Skylighting.Syntax.Actionscript
                       Skylighting.Syntax.Ada
                       Skylighting.Syntax.Agda
                       Skylighting.Syntax.Alert
                       Skylighting.Syntax.AlertIndent
                       Skylighting.Syntax.Apache
                       Skylighting.Syntax.Asn1
                       Skylighting.Syntax.Asp
                       Skylighting.Syntax.Ats
                       Skylighting.Syntax.Awk
                       Skylighting.Syntax.Bash
                       Skylighting.Syntax.Bibtex
                       Skylighting.Syntax.Boo
                       Skylighting.Syntax.C
                       Skylighting.Syntax.Changelog
                       Skylighting.Syntax.Clojure
                       Skylighting.Syntax.Cmake
                       Skylighting.Syntax.Coffee
                       Skylighting.Syntax.Coldfusion
                       Skylighting.Syntax.Commonlisp
                       Skylighting.Syntax.Cpp
                       Skylighting.Syntax.Cs
                       Skylighting.Syntax.Css
                       Skylighting.Syntax.Curry
                       Skylighting.Syntax.D
                       Skylighting.Syntax.Diff
                       Skylighting.Syntax.Djangotemplate
                       Skylighting.Syntax.Dockerfile
                       Skylighting.Syntax.Dot
                       Skylighting.Syntax.Doxygen
                       Skylighting.Syntax.Doxygenlua
                       Skylighting.Syntax.Dtd
                       Skylighting.Syntax.Eiffel
                       Skylighting.Syntax.Elixir
                       Skylighting.Syntax.Email
                       Skylighting.Syntax.Erlang
                       Skylighting.Syntax.Fasm
                       Skylighting.Syntax.Fortran
                       Skylighting.Syntax.Fsharp
                       Skylighting.Syntax.Gcc
                       Skylighting.Syntax.Glsl
                       Skylighting.Syntax.Gnuassembler
                       Skylighting.Syntax.Go
                       Skylighting.Syntax.Hamlet
                       Skylighting.Syntax.Haskell
                       Skylighting.Syntax.Haxe
                       Skylighting.Syntax.Html
                       Skylighting.Syntax.Idris
                       Skylighting.Syntax.Ini
                       Skylighting.Syntax.Isocpp
                       Skylighting.Syntax.Java
                       Skylighting.Syntax.Javadoc
                       Skylighting.Syntax.Javascript
                       Skylighting.Syntax.Json
                       Skylighting.Syntax.Jsp
                       Skylighting.Syntax.Julia
                       Skylighting.Syntax.Kotlin
                       Skylighting.Syntax.Latex
                       Skylighting.Syntax.Lex
                       Skylighting.Syntax.Lilypond
                       Skylighting.Syntax.LiterateCurry
                       Skylighting.Syntax.LiterateHaskell
                       Skylighting.Syntax.Llvm
                       Skylighting.Syntax.Lua
                       Skylighting.Syntax.M4
                       Skylighting.Syntax.Makefile
                       Skylighting.Syntax.Mandoc
                       Skylighting.Syntax.Markdown
                       Skylighting.Syntax.Mathematica
                       Skylighting.Syntax.Matlab
                       Skylighting.Syntax.Maxima
                       Skylighting.Syntax.Mediawiki
                       Skylighting.Syntax.Metafont
                       Skylighting.Syntax.Mips
                       Skylighting.Syntax.Modelines
                       Skylighting.Syntax.Modula2
                       Skylighting.Syntax.Modula3
                       Skylighting.Syntax.Monobasic
                       Skylighting.Syntax.Nasm
                       Skylighting.Syntax.Noweb
                       Skylighting.Syntax.Objectivec
                       Skylighting.Syntax.Objectivecpp
                       Skylighting.Syntax.Ocaml
                       Skylighting.Syntax.Octave
                       Skylighting.Syntax.Opencl
                       Skylighting.Syntax.Pascal
                       Skylighting.Syntax.Perl
                       Skylighting.Syntax.Php
                       Skylighting.Syntax.Pike
                       Skylighting.Syntax.Postscript
                       Skylighting.Syntax.Prolog
                       Skylighting.Syntax.Pure
                       Skylighting.Syntax.Python
                       Skylighting.Syntax.R
                       Skylighting.Syntax.Relaxng
                       Skylighting.Syntax.Relaxngcompact
                       Skylighting.Syntax.Rest
                       Skylighting.Syntax.Rhtml
                       Skylighting.Syntax.Roff
                       Skylighting.Syntax.Ruby
                       Skylighting.Syntax.Rust
                       Skylighting.Syntax.Scala
                       Skylighting.Syntax.Scheme
                       Skylighting.Syntax.Sci
                       Skylighting.Syntax.Sed
                       Skylighting.Syntax.Sgml
                       Skylighting.Syntax.SqlMysql
                       Skylighting.Syntax.SqlPostgresql
                       Skylighting.Syntax.Sql
                       Skylighting.Syntax.Tcl
                       Skylighting.Syntax.Tcsh
                       Skylighting.Syntax.Texinfo
                       Skylighting.Syntax.Verilog
                       Skylighting.Syntax.Vhdl
                       Skylighting.Syntax.Xml
                       Skylighting.Syntax.Xorg
                       Skylighting.Syntax.Xslt
                       Skylighting.Syntax.Xul
                       Skylighting.Syntax.Yacc
                       Skylighting.Syntax.Yaml
                       Skylighting.Syntax.Zsh
  other-extensions:    CPP, Arrows
  build-depends:       base,
                       mtl,
                       text,
                       bytestring,
                       regex-pcre-builtin,
                       directory,
                       filepath,
                       aeson,
                       case-insensitive,
                       utf8-string,
                       hxt,
                       safe,
                       blaze-html >= 0.5,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(bootstrap)
    buildable:         False

Flag bootstrap
  Description:   Only build skylighting-extract
  Default:       False

executable skylighting-extract
  build-depends:       base,
                       filepath,
                       text,
                       regex-pcre-builtin,
                       safe,
                       hxt,
                       utf8-string,
                       case-insensitive,
                       aeson,
                       pretty-show,
                       containers,
                       directory
  hs-source-dirs:      bin, src
  main-is:             extract.hs
  default-language:    Haskell2010
  other-extensions:    CPP
  ghc-options:         -Wall
  other-modules:       Skylighting.Types
                       Skylighting.Regex
                       Skylighting.Parser
  if flag(bootstrap)
    buildable:         True
  else
    buildable:         False

executable skylighting
  build-depends:       base,
                       filepath,
                       text,
                       pretty-show,
                       containers,
                       directory,
                       bytestring,
                       blaze-html >= 0.5,
                       skylighting
  hs-source-dirs:      bin
  main-is:             main.hs
  default-language:    Haskell2010
  other-extensions:    CPP
  ghc-options:         -Wall
  if flag(bootstrap)
    buildable:         False

test-suite test-skylighting
  Type:           exitcode-stdio-1.0
  Main-Is:        test-skylighting.hs
  Hs-Source-Dirs: test
  build-depends:  base,
                  HUnit,
                  tasty,
                  tasty-golden,
                  tasty-hunit,
                  Diff,
                  pretty-show,
                  aeson,
                  bytestring,
                  directory,
                  filepath,
                  QuickCheck,
                  skylighting
  default-language: Haskell2010
  if flag(bootstrap)
    buildable:         False

